# FundFL

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
fundfl/: README.md  build.rs
fundfl/src/: hnsw_index.rs  vector_db.rs
proto/: fundfl.proto
python/: load_data.py  requirements.txt
python/analysis/: __init__.py  risk_analyzer.py
python/tests/: test_risk_analyzer.py
src/: agent.rs  audit.rs  fed_learn.rs  fund_db.rs  grpc_service.rs  hallucination.rs  hnsw_index.rs  lib.rs  main.rs  rest_api.rs  web_dashboard.rs
